objects/PKBTranslation__c.object
<CustomObject>
    <description>Allows you to support translated articles in your public knowledge base. Included with PKB Site Setup object.</description>
    <fields>
        <fullName>Category1Description__c</fullName>
        <inlineHelpText>The description of the first category that appears on the Home page of the public knowledge base.</inlineHelpText>
        <label>Category 1 Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category2Description__c</fullName>
        <inlineHelpText>The description of the second category that appears on the Home page of the public knowledge base.</inlineHelpText>
        <label>Category 2 Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category3Description__c</fullName>
        <inlineHelpText>The description of the third category that appears on the Home page of the public knowledge base.</inlineHelpText>
        <label>Category 3 Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HomeAdText__c</fullName>
        <inlineHelpText>The text that appears under the advertising title on the home page of the public knowledge base. This field is limited to 32,000 characters.</inlineHelpText>
        <label>Home Advertising Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HomeAdTitle__c</fullName>
        <inlineHelpText>The advertising title that appears on the home page of the public knowledge base. This field is limited to 255 characters.</inlineHelpText>
        <label>Home Advertising Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <inlineHelpText>The target language as identified by its IETF code. For example, if you&apos;re translating from French to American English, enter en_US here.</inlineHelpText>
        <label>Language Code</label>
        <picklist>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>da</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ko</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nl_NL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pt_BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>th</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zh_CN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zh_TW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PKB_Site_Setup__c</fullName>
        <description>Associated main PKB object</description>
        <label>PKB Site Setup</label>
        <referenceTo>PKBSiteSetup__c</referenceTo>
        <relationshipLabel>Site Translations</relationshipLabel>
        <relationshipName>PKB_translations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Site Translation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Translation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site translations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>